--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,12 @@ spring:
     password: 123456
     hikari:
       max-lifetime: 31000
+
+
+application:
+  minio:
+    enable: true
+    endpoint: http://127.0.0.1:9000
+    accessKeyId: minio
+    accessKeySecret: 1234567890
+    bucketName: "my.example.s3.bucket"
