--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   servlet:
     session:
       cookie:
-        name: Sneakydog_distinctid
+        name: Sneakydog_AS_distinctid
 
 spring:
   datasource:
